<resources>
    <string name="action_settings">Settings</string>
    <string name="interneterror">Check Internet Connection</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="sign_up">Don\'t have an account?</string>
    <string name="permission_rationale">Location data is used as part of the Google Fit API</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="verify">Verifying your number!</string>
    <string name="resend">Resend OTP?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">SKIP</string>
    <string name="nationalid">ENTER NATIONAL ID</string>
    <string name="profile_info">This will help us to connect you with government health services</string>
    <string name="select_blood">Select Blood Group</string>
    <string name="occupation_txt">Occupation</string>
    <string name="gov_txt">Government</string>
    <string name="privatecom_txt">Private Company</string>
    <string name="selfemp_txt">Self Employed</string>
    <string name="nonprofit_txt">Non-Profit Organization</string>
    <string name="other_txt">Other</string>
    <string name="weekly_txt">Weekly</string>
    <string name="monthly_txt">Monthly</string>
    <string name="yearly_txt">Yearly</string>
    <string name="freq_txt">Frequency</string>
    <string name="diettype_txt">Diet Type</string>
    <string name="veg_txt">Vegetarian</string>
    <string name="nonveg_txt">Non-Vegetarian</string>
    <string name="vegan_txt">Vegan</string>
    <string name="egg_txt">Eggetarian</string>
    <string name="keto_txt">Ketogenic</string>
    <string name="paleo_txt">Paleo</string>
    <string name="jain_txt">Jain</string>
    <string name="vegconsumption_txt">Average quantity of vegetables consumed </string>
    <string name="fruitconsumption_txt">How many cups of fruits you had in the </string>
    <string name="cerealsconsumption_txt">Average quantity of cereals consumed </string>
    <string name="cerealsconsumption_info">1 = 1 standard tandoor roti /bread slice equivalent</string>
    <string name="fastfoodconsumption_txt">Average quantity of fast food consumed in the </string>
    <string name="fastfoodconsumption_info">1 = 1 burger, 1 slice pizza</string>
    <string name="drinkconsumption_txt">Drinks (juice, soda, cola) taken in the </string>
    <string name="drinkconsumption_info">1 = 1 glass</string>
    <string name="alcoholconsumption_txt">Do you take alcohol</string>
    <string name="yes_txt">Yes</string>
    <string name="no_txt">No</string>
    <string name="alcoholintake_txt">Alcohol Intake</string>
    <string name="daily_txt">Daily</string>
    <string name="Addmore_txt">Add More</string>
    <string name="smokingconsumption_txt">Smoking</string>
    <string name="smokingconsumption_info">Choose Smoking Start and End Age</string>
    <string name="smokingconsumption_info1">Choose number of cigarettes smoked</string>
    <string name="tobacco_info">Choose consumption of non smoking tobacco</string>
    <string name="vigorousexcercise_txt">In the , how much time did you spend doing vigorous intensity physical activity?</string>
    <string name="vigorous_info">1 = 1 hour</string>
    <string name="moderateexcercise_txt">In the , how much time did you spend doing moderate intensity physical activity?</string>
    <string name="lightintensity_txt">In the , how much time did you spend doing light intensity physical activity?</string>
    <string name="Diabetic_txt">Are you Diabetic?</string>
    <string name="Diabetic_info1">1.  Taking Medicine with Normal Sugar Levels</string>
    <string name="Diabetic_info_1">Taking Medicine with Normal Sugar Levels</string>
    <string name="Diabetic_info2">2.  Taking Medicine but Higher Sugar Levels</string>
    <string name="Diabetic_info_2">Taking Medicine but Higher Sugar Levels</string>
    <string name="Diabetic_info3">3.  Controlling HbA1C below 7  without medicines</string>
    <string name="Diabetic_info_3">Controlling HbA1C below 7  without medicines</string>
    <string name="Diabetic_info4">4.  Not taking medicine and HbA1C above 7</string>
    <string name="Diabetic_info_4">Not taking medicine and HbA1C above 7</string>
    <string name="bloodcholestrol_txt">Total Blood Cholesterol </string>
    <string name="bloodch_info1">Less than 200</string>
    <string name="bloodch_info2">200–240</string>
    <string name="bloodch_info3">More than 240</string>
    <string name="bloodpressure_txt">Blood Pressure</string>
    <string name="systolic_txt">Enter Systolic Blood Pressure</string>
    <string name="dys_txt">Enter Diastolic Blood Pressure</string>
    <string name="heartailment_txt">Have you been diagnosed to have any heart related ailment?</string>
    <string name="ques1_text">Coronary artery disease/ ischemic heart disease</string>
    <string name="ques2_text">Have you ever suffered from Angina pain?</string>
    <string name="ques3_text">Are you under regular medication for the same?</string>
    <string name="ques4_text">Have you suffered a heart attack?</string>
    <string name="ques5_text">Do you have an abnormal ECG for which you are being treated?</string>
    <string name="ques6_text">Have you undergone coronary angiography?</string>
    <string name="ques7_text">Have you undergone bypass surgery?</string>
    <string name="ques8_text">Have you undergone stent placement?</string>
    <string name="ques9_text">Have you undergone any valve surgery  / procedure?</string>
    <string name="stroke_txt">Have you suffered from stroke?</string>
    <string name="strokereason_txt">Reason for stroke?</string>
    <string name="strokereason_info1">Clot</string>
    <string name="strokereason_info2">Bleed</string>
    <string name="strokereason_info3">Embolus</string>
    <string name="tia_txt">Have you ever been diagnosed to have a TIA(Transient Ischemic Attack)</string>
    <string name="tiatreatment_txt">Are you under regular treatment for the same?</string>
    <string name="preexist_txt">Do you have any pre-existing medical conditions/diseases?</string>
    <string name="anyallergy_txt">Are you having any allergies?</string>
    <string name="medication_txt">Are you taking any regular medication?</string>
    <string name="username">Username</string>
    <string name="mobile">Mobile</string>
    <string name="NetworkError">Check Internet Connection</string>
    <string name="invalidMobile">Invalid Mobile Number</string>
    <string name="healthtrack">Health Tracker</string>
    <string name="healthtrackinfo">Use a smart device to track your health vitals like blood pressure, heart rate,ECG, pulse and much more</string>
    <string name="medicalhistory">Medical History</string>
    <string name="medicalhistoryinfo">Upload your medical history, lab results, and medical reports through the App
and share it with your doctor as you book an appointment with doctor</string>
    <string name="labtest">Book Lab Tests</string>
    <string name="labtestinfo">Book a lab test and get your medical samples collected by collection agents at your  door step</string>
    <string name="ordermedicine">Order Medicines</string>
    <string name="ordermedicineinfo">Order medicine online and get them delivered at your doorstep</string>
    <string name="hr_title">Heart rate </string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="error_title">Something went wrong!</string>
    <string name="restart_app">Restart app</string>
    <string name="close_app">Close app</string>
    <string name="signuptext">Already have account?</string>
    <string name="ValidMobile">Enter Valid Mobile Number</string>
    <string name="PasswordValidation">Must contains 8 digit passwords includes a digit,lowercase,uppercase and special Character must occur at least once</string>
    <string name="next">NEXT</string>
    <string name="start">GOT IT</string>
    <string name="customactivityoncrash_error_activity_restart_app">Restart app</string>
    <string name="customactivityoncrash_error_activity_close_app">Close app</string>
    <string name="customactivityoncrash_error_activity_error_details">Error details</string>
    <string name="customactivityoncrash_error_activity_error_details_title">Error details</string>
    <string name="customactivityoncrash_error_activity_error_details_close">Close</string>
    <string name="customactivityoncrash_error_activity_error_details_copy">Copy to clipboard</string>
    <string name="customactivityoncrash_error_activity_error_details_copied">Copied to clipboard</string>
    <string name="customactivityoncrash_error_activity_error_details_clipboard_label">Error information</string>
    <string name="Fieldempty">Field\'s can\'t be empty</string>
    <string name="very_severely_underweight">Very Severely Underweight</string>
    <string name="severely_underweight">Severely Underweight</string>
    <string name="underweight">Underweight</string>
    <string name="normal">Normal</string>
    <string name="overweight">Overweight</string>
    <string name="obese_class_i">Moderately Obese</string>
    <string name="obese_class_ii">Severely Obese</string>
    <string name="obese_class_iii">Very Severely Obese</string>
    <string name="removemore_txt">Remove</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="heart_rate">Heart rate</string>
    <string name="heart_rate_unit">bpm</string>
    <string name="blood_pressure">Blood pressure</string>
    <string name="blood_pressure_value">%1$d/%2$d</string>
    <string name="bp_unit">mmHg</string>
    <string name="afib_label">AFIB</string>
    <string name="arrhythmia_label">Arrhythmia</string>
    <string name="hrv_label">Stress level</string>
    <string name="pulse">PULSE</string>
    <string name="rpwv">rPWV</string>
    <string name="swipe">Swipe to get More Values</string>
    <string name="height">HEIGHT(cm)</string>
    <string name="weight_text">WEIGHT(kg)</string>
    <string name="bandconnect">Health Band Connectivity</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snack">Snack</string>
    <string name="date">DATE</string>
    <string name="time">TIME</string>
    <string name="submit">Submit</string>
    <string name="systolic_dia">SYS/DIA</string>
    <string name="foodname">Food Name</string>
    <string name="calories">Calories</string>
    <string name="nf_total_fat">Total Fat</string>
    <string name="saturated_fat">Saturated Fat</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="protein">Protein</string>
    <string name="sodium">Sodium</string>
    <string name="nf_total_carbohydrate">Carbohydrate</string>
    <string name="nf_dietary_fiber">Dietary Fiber</string>
    <string name="save">Save</string>
    <string name="name">Full Name</string>
    <string name="tenant">Select Tenant</string>
    <string name="lovedonedetail">Details of Loved One\'s</string>
    <string name="nutrition">Track Diet &amp; Excercise</string>
    <string name="editProfile">Edit Profile</string>
    <string name="history">Body Vitals History</string>
    <string name="connectdevice">Connect Device</string>
    <string name="logout">Logout</string>
    <string name="howtouse">How to Use</string>
    <string name="homepage">Home</string>
</resources>